# telemetry-26

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
base-station/: CMakeLists.txt
base-station/bsp/: .mxproject  .project  CMakeLists.txt  Makefile  bsp.ioc
base-station/bsp/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
base-station/bsp/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c
base-station/bsp/include/: FreeRTOSConfig.h
base-station/src/: main.cpp
base-station/src/app/: CMakeLists.txt  app.cpp  app.hpp
base-station/tests/: CMakeLists.txt  test.cpp
core/: CMakeLists.txt
core/bsp/: CMakeLists.txt
core/drivers/: CMakeLists.txt
core/drivers/can/: CMakeLists.txt  can.cpp
core/drivers/lora/: CMakeLists.txt  lora.cpp
core/drivers/sd/: CMakeLists.txt  sd.cpp  sd.hpp
core/interfaces/: CMakeLists.txt  interface.cpp  interface.hpp
core/resources/: CMakeLists.txt  context.hpp
core/tasks/: CMakeLists.txt  job.hpp  task.hpp
remote/: CMakeLists.txt
remote/bsp/: CMakeLists.txt
remote/src/: main.cpp
remote/src/app/: CMakeLists.txt  app.hpp
remote/tests/: CMakeLists.txt
tools/cmake/: arm-none-eabi-gcc.cmake  format.cmake
